[package]
name = "window-controller"
version = "0.1.0"
authors = ["Adrian Milvang <adrian.milvang@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
bench = false
name = "window-controller"
test = false

[dependencies]
embedded-hal = "1.0"
nb = "1.1.0"
panic-halt = "1.0.0"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-uno"]

[features]
fourth = []
full = []
half = []
sixteenth = []

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
opt-level = "s"
lto = true
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
lto = true
panic = "abort"
codegen-units = 1
